--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,10 +17,15 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    packagingOptions{
+        exclude 'META-INF/LICENSE.txt'
+        exclude 'META-INF/NOTICE.txt'
+    }
 }
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile files('libs/servlet-api.jar')
     compile files('libs/commons-codec-1.9.jar')
+    compile files('libs/commons-lang3-3.3.2.jar')
 }
