--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         </activity>
 
         <activity
+            android:name="com.example.kevin.calendarapp.Search_View"
+            android:label="Calendar App">
+        </activity>
+
+        <activity
             android:name=".Daily_View"
             android:label="@string/app_name">
 
