--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.kevin.calendarapp.Monthly_View"
-            android:label="@string/app_name" >
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -27,7 +28,8 @@
 
         <activity
             android:name=".Daily_View"
-            android:label="@string/app_name">
+            android:label="@string/app_name"
+            android:configChanges="orientation|screenSize">
 
         </activity>
 
@@ -36,6 +38,14 @@
             android:label="@string/app_name">
 
         </activity>
+
+        <activity
+            android:name=".Weekly_View"
+            android:label="Calendar App"
+            android:configChanges="orientation|screenSize">
+
+        </activity>
+
     </application>
 
 </manifest>
