--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
 
         <activity
             android:name=".Weekly_View"
-            android:label="Calendar App"
+            android:label="@string/app_name"
             android:configChanges="orientation|screenSize">
 
         </activity>
